Modify config for me

--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               My blog
+tagline:             '總是要留下走過得痕跡'
+description:         '希望可以留下一些 自己學習的痕跡 在迷失時 可以找尋最初的目標 <a href="https://github.com/LunaHuang" target="_blank">Luna</a> .'
+url:                 https://lunahuang.github.io
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Luna Huang
+  url:               ''
+  email:             shiulinghuang@gmail.com
 
 # Custom vars
 version:             1.0.0
