--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               My blog
 tagline:             '總是要留下走過得痕跡'
 description:         '希望可以留下一些 自己學習的痕跡 在迷失時 可以找尋最初的目標 <a href="https://github.com/LunaHuang" target="_blank">Luna</a> .'
 url:                 https://lunahuang.github.io
-baseurl:             ''
+baseurl:			 https://lunahuang.github.io
 paginate:            5
 
 # About/contact
